[gd_scene load_steps=3 format=2]

[ext_resource path="res://Assets/Fonts/font_12.tres" type="DynamicFont" id=1]
[ext_resource path="res://UI/Dialogs/UIDialogUnsavedChanges.gd" type="Script" id=2]

[node name="UIDialogUnsavedChanges" type="WindowDialog"]
visible = true
margin_right = 340.0
margin_bottom = 90.0
rect_min_size = Vector2( 340, 90 )
window_title = "Save changes?"
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -30.8979
margin_bottom = -9.89786
custom_constants/separation = 20
alignment = 1
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="SaveButton" type="Button" parent="HBoxContainer"]
margin_left = 76.0
margin_right = 117.0
margin_bottom = 21.0
custom_fonts/font = ExtResource( 1 )
text = "Save"

[node name="DiscardButton" type="Button" parent="HBoxContainer"]
margin_left = 137.0
margin_right = 192.0
margin_bottom = 21.0
custom_fonts/font = ExtResource( 1 )
text = "Discard"

[node name="CancelButton" type="Button" parent="HBoxContainer"]
margin_left = 212.0
margin_right = 264.0
margin_bottom = 21.0
custom_fonts/font = ExtResource( 1 )
text = "Cancel"

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -145.5
margin_right = 145.5
margin_bottom = 51.0
custom_fonts/font = ExtResource( 1 )
text = "There are unsaved changes. Do you want to keep them before exiting Lorien?"
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="HBoxContainer/SaveButton" to="." method="_on_SaveButton_pressed"]
[connection signal="pressed" from="HBoxContainer/DiscardButton" to="." method="_on_DiscardButton_pressed"]
[connection signal="pressed" from="HBoxContainer/CancelButton" to="." method="_on_CancelButton_pressed"]
